# slackscope

./: .python-version  AGENTS.md  README.md  SLACK_CLI_SPEC.md  cli.py  main.py  pyproject.toml
skills/slack-cli-read/: SKILL.md
slack_cli/: __init__.py  app.py  client.py  config.py  context.py  errors.py  normalize.py  render.py  resolve.py  timeparse.py
slack_cli/commands/: api.py  auth.py  chat.py  dm.py  me.py  thread.py  users.py
